[gd_scene load_steps=11 format=3 uid="uid://kf7ft8561xts"]

[ext_resource type="Script" uid="uid://cyaay7qt3f4dy" path="res://scripts/game.gd" id="1_lnu2h"]
[ext_resource type="PackedScene" uid="uid://bjttqlbdjuskd" path="res://scenes/background.tscn" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://dn3ux3apbju6n" path="res://scenes/snow_ball.tscn" id="2_lbhrr"]
[ext_resource type="PackedScene" uid="uid://omj2y7mwt8hv" path="res://scenes/player.tscn" id="2_yqjtg"]
[ext_resource type="Texture2D" uid="uid://c20atakrhtmy0" path="res://assets/sprites/buttons.png" id="5_iywne"]
[ext_resource type="PackedScene" uid="uid://cuomncejh6qye" path="res://scenes/obstacles.tscn" id="6_p57ef"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p57ef"]
atlas = ExtResource("5_iywne")
region = Rect2(864, 224, 144, 152)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5sy4"]
atlas = ExtResource("5_iywne")
region = Rect2(456, 208, 160, 168)

[sub_resource type="CircleShape2D" id="CircleShape2D_u5sy4"]
radius = 70.0

[sub_resource type="LabelSettings" id="LabelSettings_iywne"]
font_color = Color(1, 0, 0, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_lnu2h")
snowball = ExtResource("2_lbhrr")

[node name="BackGround" parent="." instance=ExtResource("1_uwrxv")]

[node name="Player" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(2, 0)

[node name="Snowball_Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="JumpButton" type="TouchScreenButton" parent="."]
top_level = true
scale = Vector2(0.5, 0.5)
texture_normal = SubResource("AtlasTexture_p57ef")
texture_pressed = SubResource("AtlasTexture_u5sy4")
shape = SubResource("CircleShape2D_u5sy4")
action = "Jump"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Info" type="Label" parent="."]
top_level = true
offset_right = 40.0
offset_bottom = 23.0
label_settings = SubResource("LabelSettings_iywne")

[node name="Update_Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Obstacles" parent="." instance=ExtResource("6_p57ef")]

[connection signal="timeout" from="Snowball_Timer" to="." method="_on_snowball_timer_timeout"]
[connection signal="timeout" from="Update_Timer" to="." method="_on_update_timer_timeout"]
